==> ARMmbed/mbed-os/targets/TARGET_MICROCHIP/TARGET_PIC32CX/port_api.c <==
/* mbed Microcontroller Library
 * Copyright (c) 2006-2013 ARM Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#include "port_api.h"
#include "pinmap.h"
#include "ioport.h"

PinName port_pin(PortName port, int pin) {
    return (PinName)((port << PORT_SHIFT) | (pin & 0x1F));
}

void port_init(port_t *obj, PortName port, int mask, PinDirection dir) {
    // Fill Port object
    obj->port = port;
    obj->mask = mask;
    obj->dir = dir; 

    // Reuse ioport logic
    if (mask) {
        ioport_init(port_pin(port, 1));
        port_dir(obj, dir);
    }
}

void port_mode(port_t *obj, PinMode mode) {
    // Reuse ioport logic
    ioport_set_port_mode(obj->port, obj->mask, mode);
}

void port_dir(port_t *obj, PinDirection dir) {
    // Reuse ioport logic
    ioport_set_port_dir(obj->port, obj->mask, (enum ioport_direction)dir);
}

void port_write(port_t *obj, int value) {
    // Reuse ioport logic
    ioport_set_port_level(obj->port, obj->mask, (enum ioport_value)value);
}

int port_read(port_t *obj) {
    // Reuse ioport logic
    return ioport_get_port_level(obj->port, obj->mask);
}
